<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintFirstName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintLastName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintPhone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintRegisterEmail"
                android:inputType="textEmailAddress" />



            <EditText
                android:id="@+id/txtSignupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintRegisterPassword"
                android:inputType="textPassword" />



            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkbxTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/textGDPR"
                    android:onClick="onClickTerms"
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:textColor="#0000EE"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTerms"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">



                <Button
                    android:id="@+id/btnRegisterNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRegisterNow"
                    android:onClick="onClickSignupBtn" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>





</RelativeLayout>