<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
        android:id="@+id/txtSendRequestUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintUsername"
        android:inputType="textEmailAddress" />


        <EditText
        android:id="@+id/txtSendRequestAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintAmount"
        android:inputType="number" />

        <EditText
            android:id="@+id/txtSendRequestRepayMonths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintRepayWithinMonths"
            android:inputType="date" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <DatePicker
                android:id="@+id/clndStartingDate"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                />
        </ScrollView>



    </LinearLayout>


    <Button
        android:id="@+id/btnSendRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="75dp"
        android:onClick="onClickSendRequest"
        android:text="@string/btnSendRequest" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-5dp">


        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:menu="@menu/nav_items"
            tools:visibility="visible"
            android:background="#E2E2E2"
            android:layout_alignParentBottom="true">

        </android.support.design.widget.BottomNavigationView>


    </RelativeLayout>

</RelativeLayout>